# parcelhubapi

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: ci.yml
parcelhubapi/: __init__.py  exceptions.py  models.py  request.py  session.py
tests/: __init__.py  test_exceptions.py  test_session.py
tests/test_models/: shipment_request.xml  test_create_shipment_response.py  test_item.py  test_shipment_request.py
tests/test_requests/: conftest.py  shipment_response.xml  test_base_request.py  test_create_draft_shipment_request.py  test_create_shipment_request.py  test_get_draft_shipments_request.py  test_get_shipments_request.py  test_get_token_request.py
